--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "luxon": "^3.1.0",
     "reflect-metadata": "^0.1.13",
+    "stack-trace": "^1.0.0-pre1",
     "superagent": "^8.0.3"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/lodash": "^4.14.188",
     "@types/luxon": "^3.1.0",
     "@types/node": "^18.11.9",
+    "@types/stack-trace": "^0.0.30",
     "@types/superagent": "^4.1.15",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
