--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "api-helper-v2",
   "version": "1.0.0",
   "description": "",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "type": "module",
+  "exports": "./build/index.js",
+  "engines": { "node": ">=14.16" },
+  "types": "./build/index.d.ts",
   "scripts": {
     "watch": "tsc --watch",
     "build": "rimraf ./build && tsc",
@@ -11,12 +13,12 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint-fix": "eslint --fix src/**/*.ts",
     "lint-fix-dry-run": "eslint --fix-dry-run src/**/*.ts",
-    "test": "jest",
-    "test:1": "jest --verbose parametersMaps.spec.ts",
-    "test:2": "jest --verbose saveMaps.spec.ts",
-    "test:3": "jest --verbose nextHopMaps.spec.ts",
-    "coverage": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "test:1": "NODE_OPTIONS=--experimental-vm-modules jest --verbose parametersMaps.spec.ts",
+    "test:2": "NODE_OPTIONS=--experimental-vm-modules jest --verbose saveMaps.spec.ts",
+    "test:3": "NODE_OPTIONS=--experimental-vm-modules jest --verbose nextHopMaps.spec.ts",
+    "coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch"
   },
   "keywords": [],
   "author": "",
