checkin build folder

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
+  "module": "NodeNext",
   "exports": "./build/index.js",
   "engines": {
     "node": ">=14.16"
