--- a/package.json
+++ b/package.json
@@ -1,56 +1,56 @@
 {
-    "name": "api-helper-v2",
-    "version": "1.0.0",
-    "description": "",
-    "type": "module",
-    "module": "NodeNext",
-    "exports": "./build/index.js",
-    "engines": {
-        "node": ">=14.16"
-    },
-    "types": "./build/index.d.ts",
-    "scripts": {
-        "watch": "tsc --watch",
-        "build": "rimraf ./build && tsc",
-        "format": "prettier --write --tab-width 4 --print-width 200 --single-quote \"src/**/*.ts\"",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-        "lint-fix": "eslint --fix src/**/*.ts",
-        "lint-fix-dry-run": "eslint --fix-dry-run src/**/*.ts",
-        "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
-        "test:1": "NODE_OPTIONS=--experimental-vm-modules jest --verbose parametersMaps.spec.ts",
-        "test:2": "NODE_OPTIONS=--experimental-vm-modules jest --verbose saveMaps.spec.ts",
-        "test:3": "NODE_OPTIONS=--experimental-vm-modules jest --verbose nextHopMaps.spec.ts",
-        "test:4": "NODE_OPTIONS=--experimental-vm-modules jest --verbose plugins.spec.ts",
-        "test:5": "NODE_OPTIONS=--experimental-vm-modules jest --verbose pluginBase.spec.ts",
-        "test:6": "NODE_OPTIONS=--experimental-vm-modules jest --verbose dtoBase.spec.ts",
-        "test:7": "NODE_OPTIONS=--experimental-vm-modules jest --verbose helper.spec.ts",
-        "coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
-        "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "class-transformer": "^0.5.1",
-        "class-validator": "^0.14.0",
-        "lodash": "^4.17.21",
-        "luxon": "^3.1.0",
-        "reflect-metadata": "^0.1.13",
-        "superagent": "^8.0.3"
-    },
-    "devDependencies": {
-        "@types/jest": "^29.2.2",
-        "@types/lodash": "^4.14.188",
-        "@types/luxon": "^3.1.0",
-        "@types/node": "^18.11.9",
-        "@types/superagent": "^4.1.15",
-        "@typescript-eslint/eslint-plugin": "^5.42.0",
-        "@typescript-eslint/parser": "^5.42.0",
-        "eslint": "^8.27.0",
-        "jest": "^29.2.2",
-        "prettier": "^2.7.1",
-        "rimraf": "^3.0.2",
-        "ts-jest": "^29.0.3",
-        "typescript": "^4.8.4"
-    }
+	"name": "api-helper-v2",
+	"version": "1.0.0",
+	"description": "",
+	"module": "NodeNext",
+	"exports": "./build/index.js",
+	"engines": {
+		"node": ">=14.16"
+	},
+	"types": "./build/index.d.ts",
+	"scripts": {
+		"watch": "tsc --watch",
+		"build": "rimraf ./build && tsc && source ./pkg-build.sh",
+		"format": "prettier --write --tab-width 4 --print-width 200 --single-quote \"src/**/*.ts\"",
+		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+		"lint-fix": "eslint --fix src/**/*.ts",
+		"lint-fix-dry-run": "eslint --fix-dry-run src/**/*.ts",
+		"test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
+		"test:1": "NODE_OPTIONS=--experimental-vm-modules jest --verbose parametersMaps.spec.ts",
+		"test:2": "NODE_OPTIONS=--experimental-vm-modules jest --verbose saveMaps.spec.ts",
+		"test:3": "NODE_OPTIONS=--experimental-vm-modules jest --verbose nextHopMaps.spec.ts",
+		"test:4": "NODE_OPTIONS=--experimental-vm-modules jest --verbose plugins.spec.ts",
+		"test:5": "NODE_OPTIONS=--experimental-vm-modules jest --verbose pluginBase.spec.ts",
+		"test:6": "NODE_OPTIONS=--experimental-vm-modules jest --verbose dtoBase.spec.ts",
+		"test:7": "NODE_OPTIONS=--experimental-vm-modules jest --verbose helper.spec.ts",
+		"coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+		"test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.0",
+		"lodash": "^4.17.21",
+		"luxon": "^3.1.0",
+		"reflect-metadata": "^0.1.13",
+		"superagent": "^8.0.3"
+	},
+	"devDependencies": {
+		"@types/jest": "^29.2.2",
+		"@types/lodash": "^4.14.188",
+		"@types/luxon": "^3.1.0",
+		"@types/node": "^18.11.9",
+		"@types/superagent": "^4.1.15",
+		"@typescript-eslint/eslint-plugin": "^5.42.0",
+		"@typescript-eslint/parser": "^5.42.0",
+		"eslint": "^8.27.0",
+		"jest": "^29.2.2",
+		"prettier": "^2.7.1",
+		"rimraf": "^3.0.2",
+		"ts-jest": "^29.0.3",
+		"typescript": "^4.8.4"
+	},
+	"type": "module"
 }
